# darts-clone

./: .gitignore  CHANGELOG.md  COPYING  COPYING.md  ChangeLog  LICENSE  Makefile.am  README  README.md  configure.ac
doc/en/: ClassInterface.md  ClassInterface.wiki  Interface.md  Introduction.md  Introduction.wiki
doc/ja/: Applications.md  Applications.wiki  ChangeLog.md  ChangeLog.wiki  ClassInterface.wiki  Evaluation.md  Interface.md  Introduction.md  Introduction.wiki
include/: Makefile.am  darts.h
src/: Makefile.am  benchmark-config.h  darts  darts-benchmark  darts-benchmark.cc  darts-config.h  darts.cc  lexicon.h  mersenne-twister.h  mkdarts  mkdarts-config.h  mkdarts.cc  timer.h
test/: Makefile.am  correct-dic  correct-result  test-darts.cc  test-lexicon  test-text  test-tools.sh
